# Dynasty

./: README.md  requirements.txt  setup.cfg
dynasty/: __init__.py  __main__.py  app.py  colors.py  factory.py  geometry.py  interfaces.py  lines.fs.glsl  lines.gs.glsl  lines.vs.glsl  models.py  renderer.py  utils.py  walkers.py  widgets.py
tests/: test_walkers.py
