[metadata]
name = dynasty
version = attr: dynasty.__version__
author = LeMinaw
author_email = leminaw@gmail.com
description = Realtime dynamic particles systems visualization
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/LeMinaw/Dynasty
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    PyQt5 >= 5.15.2
    numpy >= 1.20.1,<2
    moderngl >= 5.6.4,<6
    sortedcontainers >= 2.3.0,<3
